# DoomHouse

./: .env  CHANGELOG.md  Makefile  README.md  debug_pipeline.py  debug_textures.py  docker-compose.yml  init_db.py  init_only.py  pyproject.toml  test_collision.py  test_e2e.py  test_wad_levels.py  verify_wad_data.py
.kilocode/rules/memory-bank/: architecture.md  context.md
docs/: architecture.md  array_usage.md  openrouter-activity.csv  post_process_architecture.md  rendering_architecture.md  streaming.md  system_architecture.md
non-streaming/: DOOMHouse.py  README.md
non-streaming/SQL/: create_dictionaries.sql  create_source_tables.sql  player_input_table.sql  post_process_view.sql  render_view.sql  rendered_frame_post_processed_table.sql  rendered_frame_table.sql
plans/: initial_plan.md  initiel_plan_prompt.md  load_wad_data.md  port_to_bsp.md  use_wad_data.md  use_wad_texture.md
polling/: DOOMHouse.py  README.md
polling/SQL/: create_dictionaries.sql  create_source_tables.sql  frame_render.sql
src/: DOOMHouse.py
src/SQL/: create_dictionaries.sql  create_source_tables.sql  create_wad_texture_tables.sql  frame_render.sql  player_input_table.sql  player_state.sql  player_state_table.sql  render_view.sql  render_view_org.sql  rendered_frame_post_processed_table.sql  resolve_geometry.sql
